--- a/web 3.html
+++ b/web 3.html
@@ -22,7 +22,7 @@
         <div class="col-md-3 col-sm-6" style="margin:2%">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Harry Potter
+                   <h5> Harry Potter & Goblet Of Fire</h5>
                 </div>
                 <div class="panel-body">
                     <img src="images/10.jpg" style="width:300px;height:300px">
@@ -33,7 +33,7 @@
         <div class="col-md-3 col-sm-6" style="margin:2%">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Harry Potter
+                   <h5> Wizarding World of Harry</h5>
                 </div>
                 <div class="panel-body">
                     <img src="images/11.jpg" style="width:300px;height:300px">
@@ -43,7 +43,7 @@
         <div class="col-md-3 col-sm-6" style="margin:2%">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Harry Potter
+                   <h5> Harry Potter </h5>
                 </div>
                 <div class="panel-body">
                     <img src="images/12.jpg" style="width:300px;height:300px">
@@ -70,7 +70,7 @@ The series was originally published in English by two major publishers, Bloomsbu
     </div>
     
     <div class="row" style="background-image: url(images/14.jpg);background-attachment: fixed;width:100%;height:50%;padding:50%">
-        <h2>The central character in the series is Harry Potter</h2>
+       <!-- <h2>The central character in the series is Harry Potter</h2>-->
     </div>
 </body>  
     
